Se hicieron los cambios

--- a/index.html
+++ b/index.html
@@ -23,6 +23,10 @@
         <input type="submit" id="botonEviar">
     </div>
 
+    <li><a href="index.html">Inicio</a></li>
+    <li><a href="acercade.html">Acercade</a></li>
+    <li><a href="cuestionario.html">cuestionario</a></li>
+
 </body>
 <footer>
     <p>Emmanuel Ramirez Reyes A01733357</p>
