Se hicieron los cambios

--- a/acercade.html
+++ b/acercade.html
@@ -4,7 +4,7 @@
         <title>Pagina de cuestionario</title>
         <ul>
     <h1>Acerca de</h1>
-    <h2> Aqui podras enviar información aerca de quien y por que se creo esta Pagina</h2>
+    <h2> Aqui podras enviar informacion aerca de quien y por que se creo esta Pagina</h2>
     <p> Emmanuel Ramirez<br>
         A01733357 <br>
    
