--- a/cuestionario.html
+++ b/cuestionario.html
@@ -8,7 +8,7 @@
             <li><a href="cuestionario.html">cuestionario</a></li>
             </ul>
     <h1>Cuestionario</h1>
-    <p></p>Aqui podras enviar información u obtener información acerca de como contactarnos con nosotros<br>
+    <p></p>Aqui podras enviar informacion u obtener informacion acerca de como contactarnos con nosotros<br>
     CONTACTO: <br>
     Email: emanuell1613@gmail.com<br>
     Numero Telefonico: 2224569785<br>
